Convert more: 4 done